# conterm

./: '  Makefile  README.md  pyproject.toml
conterm/: __main__.py  keys.py  logging.py  wrapper.py
conterm/cli/: __init__.py  select.py  spinner.py  task.py  util.py  wrapper.py
conterm/control/: __init__.py  event.py  keys.py  unix.py  win.py
conterm/control/ansi/: __init__.py  actions.py  event.py  keys.py  unix.py
conterm/control/raw/: __init__.py
conterm/examples/: controls.py  logging.py  markup.py  pprint.py
conterm/examples-copy/: logging.py  preview.py
conterm/examples-copy/cli/: full.py
conterm/examples/cli/: full.py  select.py  tasks.py
conterm/input/: __init__.py  event.py  keys.py  linux.py  win.py
conterm/input/ansi/: event.py  keys.py  win.py
conterm/input/raw/: __init__.py
conterm/markup/: __init__.py  color.py  hyperlink.py  macro.py  preview.py
conterm/pretty/: __init__.py  pprint.py
conterm/pretty/markup/: __init__.py  color.py  color_consts.py  macro.py  (+1 more)
conterm/printing/: pprint.py  themes.py
conterm/tui/: __init__.py  app.txt  application.py  buffer.py  log.txt  node.py  style.py  tree.py  util.py
conterm/win/: __init__.py  controller.py  input.py  structs.py
conterm/win_api/: __init__.py  console.py  input.py  signatures.py  structs.py
examples/: controls.py  logging.py  markup.py  pprint.py  temp.txt
examples/cli/: full.py  indie_inputs.py  select.py  tasks.py
examples/wrappers/: argparse.py  cli.py
playground/: argparse.py  control.py  expected.py  key_mouse.py  main.py  markup.py  pyinput.py  test.py
(+3 files in other folders)
